test/lit/pto/tpush_tpop_globaltensor_nosplit_conflict_invalid.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.
//
// Guards global-only gm_slot_tensor peer validation so cube/vector halves of
// one logical pipe cannot infer conflicting split usage.
//
// RUN: not ptoas --pto-arch=a3 %s 2>&1 | FileCheck %s

module {
  func.func @cube_kernel(%gm_slot_buffer : !pto.ptr<f32>)
      attributes {pto.kernel_kind = #pto.kernel_kind<cube>} {
    %c4 = arith.constant 4 : index
    %c128 = arith.constant 128 : index
    %c16384 = arith.constant 16384 : index
    %c1 = arith.constant 1 : index
    %gm_slots = pto.make_tensor_view %gm_slot_buffer,
      shape = [%c4, %c128, %c128], strides = [%c16384, %c128, %c1]
      : !pto.tensor_view<4x128x128xf32>
    pto.aic_initialize_pipe {id = 0, dir_mask = 1, slot_size = 262144}
      (gm_slot_tensor = %gm_slots : !pto.tensor_view<4x128x128xf32>)

    %entry = pto.talloc_to_aiv {id = 0, split = 0}
      -> !pto.tensor_view<4x128x128xf32>
    pto.tpush_to_aiv(%entry : !pto.tensor_view<4x128x128xf32>) {id = 0, split = 0}
    return
  }

  func.func @vector_kernel(%gm_slot_buffer : !pto.ptr<f32>)
      attributes {pto.kernel_kind = #pto.kernel_kind<vector>} {
    %c4 = arith.constant 4 : index
    %c64 = arith.constant 64 : index
    %c16 = arith.constant 16 : index
    %c1 = arith.constant 1 : index
    %c128 = arith.constant 128 : index
    %c16384 = arith.constant 16384 : index
    %gm_slots = pto.make_tensor_view %gm_slot_buffer,
      shape = [%c4, %c64, %c128], strides = [%c16384, %c128, %c1]
      : !pto.tensor_view<4x64x128xf32>
    pto.aiv_initialize_pipe {id = 0, dir_mask = 1, slot_size = 262144}
      (gm_slot_tensor = %gm_slots : !pto.tensor_view<4x64x128xf32>)

    %entry = pto.tpop_from_aic {id = 0, split = 1}
      -> !pto.tensor_view<4x64x128xf32>
    pto.tfree_from_aic(%entry : !pto.tensor_view<4x64x128xf32>) {id = 0, split = 1}
    return
  }
}

// CHECK: error: 'pto.initialize_l2g2l_pipe' op conflicting pipe split usage across peer pipe init ops
